--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.65.1",
